[tool.poetry]
name = "kpops"
version = "3.2.1"
description = "KPOps is a tool to deploy Kafka pipelines to Kubernetes"
authors = ["bakdata <opensource@bakdata.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bakdata/kpops"
documentation = "https://bakdata.github.io/kpops/latest"
keywords = ["kafka", "kubernetes", "stream-processing", "pipelines"]
classifiers = [
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development",
  "Intended Audience :: Developers",
  "Typing :: Typed",
]

[tool.poetry.scripts]
kpops = "kpops.cli.main:app"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.3"
pydantic-settings = "^2.0.3"
rich = "^12.4.4"
PyYAML = "^6.0"
typer = { extras = ["all"], version = "^0.6.1" }
dtyper = "^2.1.0"
pyhumps = "^3.7.3"
cachetools = "^5.2.0"
dictdiffer = "^0.9.0"
python-schema-registry-client = "^2.4.1"
httpx = "^0.24.1"
networkx = "^3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-mock = "^3.10.0"
pytest-timeout = "^2.1.0"
snapshottest = "^0.6.0"
pre-commit = "^2.19.0"
ruff = "^0.1.7"
typer-cli = "^0.0.13"
pyright = "^1.1.314"
pytest-rerunfailures = "^11.1.2"
pytest-asyncio = "^0.21.1"
pytest-httpx = "^0.22.0"
pytablewriter = { extras = ["from"], version = "^1.0.0" }
polyfactory = "^2.13.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-macros-plugin = "^0.7.0"
mkdocs-material = "^9.0.0"
mkdocs-glightbox = "^0.3.1"
mkdocs-exclude-search = "^0.6.5"
mike = "^1.1.2"

[tool.poetry_bumpversion.file."kpops/__init__.py"]

[tool.ruff]
ignore = [
  # Rules in conflict with `ruff-format` -- START
  "W191", # Checks for indentation that uses tabs. Spaces are preferred.
  # "E111", # Checks for indentation with a non-multiple of 4 spaces, add when out of nursery
  # "E114", # Checks for indentation of comments with a non-multiple of 4 spaces, add when out of nursery
  # "E117", # Checks for over-indented code, add when out of nursery
  "E501", # Line too long
  "D206", # Checks for docstrings that are indented with tabs.
  "D300", # Checks for docstrings that use '''triple single quotes''' instead of """triple double quotes""".
  "Q000", # Checks for inline strings that use single quotes.
  "Q001", # Checks for multiline strings that use single quotes
  "Q002", # Checks for docstrings that use single quotes.
  "Q003", # Checks for strings that include escaped quotes.
  "COM812", # Checks for the absence of trailing commas.
  "COM819", # Checks for the presence of prohibited trailing commas.
  "ISC001", # Checks for implicitly concatenated strings on a single line.
  "ISC002", # Checks for implicitly concatenated strings that span multiple lines.
  # Rules in conflict with `ruff-format` -- END
  "D1", # Missing docstring for {} -- Inconvenient to enforce
  # The following "D" rules do not correspond to our coding style. We use the pep257 convention, but
  # "D212" should not be ignored. In ruff (0.0.291) we cannot select a rule that is excluded by specifying
  # a convention, hence our only option is to manually replicate it.
  "D203", # 1 blank line required before class docstring
  "D213", # Multi-line docstring summary should start at the second line
  "D214", # Section is over-indented ("{name}")
  "D215", # Section underline is over-indented ("{name}")
  "D404", # First word of the docstring should not be "This"
  "D405", # Section name should be properly capitalized ("{name}")
  "D406", # Section name should end with a newline ("{name}")
  "D407", # Missing dashed underline after section ("{name}")
  "D408", # Section underline should be in the line following the section's name ("{name}")
  "D409", # Section underline should match the length of its name ("{name}")
  "D410", # Missing blank line after section ("{name}")
  "D411", # Missing blank line before section ("{name}")
  "D413", # Missing blank line after last section ("{name}")
  "D415", # First line should end with a period, question mark, or exclamation point
  "D416", # Section name should end with a colon ("{name}")
  "D417", # Missing argument description in the docstring for {definition}: {name}
  "B009", # Do not call getattr with a constant attribute value. -- Not always applicable
  "B010", # Do not call setattr with a constant attribute value. -- Not always applicable
  "RUF012", # type class attrs with `ClassVar` -- Too strict/trigger-happy
  "UP007", # Use X | Y for type annotations -- `typer` doesn't support it
  "PIE804", # Unnecessary `dict` kwargs -- Inconvenient to enforce
  "RET505", # Unnecessary {branch} after return statement -- Lots of false positives
  "RET506", # Unnecessary {branch} after raise statement -- Lots of false positives
  "RET507", # Unnecessary {branch} after continue statement -- Lots of false positives
  "RET508", # Unnecessary {branch} after break statement -- Lots of false positives
  "PLR09", # upper bound on number of arguments, functions, etc. -- Inconvenient to enforce
  "PLR2004", # Magic value used in comparison, consider replacing {value} with a constant variable -- Inconvenient to enforce
  "PLW2901", # `for` loop variable `{var}` overwritten by assignment target -- Inconvenient to enforce
  "TRY002", # Create your own exception -- Inconvenient to enforce
  "TRY003", # Avoid specifying long messages outside the exception class -- Inconvenient to enforce
]
select = [
  "F", # Pyflakes
  "E", # pycodestyle Errors
  "W", # pycodestyle Warnings
  "C90", # mccabe
  "I", # isort
  "D", # pydocstyle
  "UP", # pyupgrade
  "B", # flake8-bugbear
  "INP", # flake8-no-pep420
  "RUF", # Ruff-specific rules
  "YTT", # flake8-2020
  "ASYNC", # flake8-async
  "BLE", # flake8-blind-except
  "COM", # flake8-commas
  "C4", # flake8-comprehensions
  "T10", # flake8-debugger
  "EM", # flake8-errmsg
  "FA", # flake8-future-annotations
  "ISC", # flake8-implicit-str-concat
  "ICN", # flake8-import-conventions
  "INP", # flake8-no-pep420
  "PIE", # flake8-pie
  "Q", # flake8-quotes
  "RSE", # flake8-raise
  "RET", # flake8-return
  "SLOT", # flake8-slots
  "SIM", # flake8-simplify
  "PTH", # flake8-use-pathlib
  "PGH", # pygrep-hooks
  "PL", # Pylint
  "TRY", # tryceratops
  # "FURB", # refurb, add when out of nursery
  # "LOG", # flake8-logging, add when out of nursery
]
output-format = "grouped"
show-fixes = true
task-tags = ["TODO", "HACK", "FIXME", "XXX"]
target-version = "py310"
extend-exclude = ["tests/*snapshots/*"]

[tool.ruff.extend-per-file-ignores]
"tests/*/__init__.py" = ["F401"]

[tool.ruff.flake8-bugbear]
extend-immutable-calls = ["typer.Argument"]

[tool.ruff.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
